# OmegaDS3231Controller

./: CMakeLists.txt  settings.json
examples/basic-identification/: CMakeLists.txt  sdkconfig  sdkconfig.old
examples/basic-identification/main/: CMakeLists.txt  main.c
inc/: OmegaDS3231Controller.h
src/: OmegaDS3231Controller.cpp
